Добавлена спецификация и контроллеры реакций
