# public_interface/logs_interface/src/main/kotlin/com/quqee/backend/internship_hits/public_interface/reaction/PossibleReactionDto.kt
@@ -1,0 +1,8 @@
+package com.quqee.backend.internship_hits.public_interface.reaction
+
+import java.util.UUID
+
+data class PossibleReactionDto(
+    val id: UUID,
+    val emoji: String
+)
